@@ -19,7 +19,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclUnixPort.h,v 1.21 2002/02/15 14:28:50 dkf Exp $
+ * RCS: @(#) $Id: tclUnixPort.h,v 1.22 2002/02/16 01:17:36 hobbs Exp $
  */
 
 #ifndef _TCLUNIXPORT
@@ -83,6 +83,13 @@ typedef off_t		Tcl_SeekOffset;
 #else
 #   define Tcl_PlatformStat		stat
 #   define Tcl_PlatformLStat		lstat
+#endif
+
+#if !HAVE_STRTOLL && defined(TCL_WIDE_INT_TYPE)
+EXTERN Tcl_WideInt	strtoll _ANSI_ARGS_((char *string,  char **endPtr,
+					     int base));
+EXTERN Tcl_WideUInt	strtoull _ANSI_ARGS_((char *string,  char **endPtr,
+					      int base));
 #endif
 
 #include <sys/file.h>
